--- a/examples/animation/add-feature-visibility.html
+++ b/examples/animation/add-feature-visibility.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>All feature visibility | CARTO</title>
+    <title>Add feature visibility | CARTO</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <script src="../../dist/carto-vl.js"></script>
