--- a/examples/animation/animate-by-date-range.html
+++ b/examples/animation/animate-by-date-range.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Animate by date/time range | CARTO</title>
+    <title>Animate by date range | CARTO</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <script src="../../dist/carto-vl.js"></script>
@@ -19,7 +19,7 @@
                 <h1>Collisions in January 2019</h1>
             </header>
             <section>
-                <p class="description open-sans">Animate features by a date/time range</p>
+                <p class="description open-sans">Animate features by a date range</p>
             </section>
             <footer class="js-footer"></footer>
         </div>
