--- a/examples/animation/animate-color-by-date.html
+++ b/examples/animation/animate-color-by-date.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Animate by date/time | CARTO</title>
+  <title>Animate and color by date | CARTO</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <script src="../../dist/carto-vl.js"></script>
