--- a/examples/animation/animation-controls.html
+++ b/examples/animation/animation-controls.html
@@ -185,17 +185,16 @@
 </head>
 
 <body>
-    <!-- Map goes here -->
     <div id="map"></div>
 
     <!-- Animation control elements -->
     <aside class="toolbox">
         <div class="box">
             <header>
-                <h1>Animation controls</h1>
+                <h1>Seattle Collisions</h1>
             </header>
             <section>
-                <p class="description open-sans">Control animations by issuing "play", "pause" and "set" commands</p>
+                <p class="description open-sans">Add animation controls for "play", "pause" and "set" commands</p>
             </section>
             <section style="margin-top: 15px;">
                 <input type="button" id="js-play-button">
@@ -226,7 +225,7 @@
             container: 'map',
             style: carto.basemaps.darkmatter,
             center: [-122.33, 47.61],
-            zoom: 10,
+            zoom: 11,
             scrollZoom: false,
         });
 
