Apply code styling and fix typos

--- a/examples/animation/animate-filtered-features.html
+++ b/examples/animation/animate-filtered-features.html
@@ -55,8 +55,8 @@
 
         // Define animation viz
         const viz = new carto.Viz(`
-            filter: $pedcount >= 1 and animation($incdate,20,fade(0.5,0.5))
-            color: opacity(turquoise,0.8)      
+            filter: $pedcount >= 1 and animation($incdate, 20,fade(0.5, 0.5))
+            color: opacity(turquoise, 0.8)      
             strokeWidth: 0
         `);
 
