--- a/examples/animation/animation-controls.html
+++ b/examples/animation/animation-controls.html
@@ -242,9 +242,9 @@
         // Define animation viz with variables
         const viz = new carto.Viz(`
             @duration: 30
-            @animation: animation($incdate,@duration,fade(1,1))
+            @animation: animation($incdate, @duration, fade(1, 1))
             filter: @animation
-            color: ramp(linear($incdate),sunset)
+            color: ramp(linear($incdate), sunset)
             strokeWidth: 0
         `);
 
