--- a/examples/animation/add-feature-visibility.html
+++ b/examples/animation/add-feature-visibility.html
@@ -54,7 +54,7 @@
 
         // Define animation viz
         const viz = new carto.Viz(`
-            filter: animation($incdate,20,fade(0.5,0.5))+0.05
+            filter: animation($incdate, 20, fade(0.5, 0.5)) + 0.05
             width: 3
             strokeWidth: 0
         `);
