--- a/examples/guides/add-interactivity/step-3.html
+++ b/examples/guides/add-interactivity/step-3.html
@@ -55,6 +55,8 @@
         // Viz using a dynamic variable
         const viz = new carto.Viz(`
             @currentFeatures: viewportCount()
+            @name: $name
+            @popK: $pop_max / 1000.0
         `);
         const layer = new carto.Layer('Cities', source, viz);
         layer.addTo(map);
@@ -64,7 +66,7 @@
             console.log('Cities layer has been loaded!');
         });
 
-        // Disable map move listener
+        // Disable previous listener on map:move
         map.off('move', displayCenter);
 
         // Add on 'updated' event handler to layer
@@ -74,6 +76,54 @@
         };
         layer.on('updated', displayNumberOfCities);
 
+
+        // DATA-DRIVEN VARIABLES & carto.Interactivity
+        const interactivity = new carto.Interactivity(layer);
+
+        // Handle 'featureClick' to display city name and population
+        interactivity.on('featureClick', featureEvent => {
+            featureEvent.features.forEach((feature) => {
+                const name = feature.variables.name.value;
+                const popK = feature.variables.popK.value.toFixed(0);
+                console.log(`You have clicked on ${name} with a population of ${popK}K`);
+            });
+
+            // Get the first feature
+            const feature = featureEvent.features[0];
+            if (!feature) {
+                return;
+            }
+
+            // Add pop-up using mapboxgl
+            const coords = featureEvent.coordinates;
+            const html = `
+                <h1>${feature.variables.name.value}</h1>
+                <p>Population: ${feature.variables.popK.value.toFixed(0)}K</p>
+            `;
+            new mapboxgl.Popup()
+                .setLngLat([coords.lng, coords.lat])
+                .setHTML(html)
+                .addTo(map);
+        });
+
+        // Disable previous listener on layer:updated
+        layer.off('updated', displayNumberOfCities);
+
+        // Change style on 'featureEnter'
+        interactivity.on('featureEnter', featureEvent => {
+            featureEvent.features.forEach((feature) => {
+                feature.color.blendTo('rgba(0, 255, 0, 0.8)', 100);
+                feature.width.blendTo(20, 100);
+            });
+        });
+
+        // Reset to previous style on 'featureLeave'
+        interactivity.on('featureLeave', featureEvent => {
+            featureEvent.features.forEach((feature) => {
+                feature.color.reset();
+                feature.width.reset();
+            });
+        });
     </script>
 </body>
 
