--- a/examples/guides/add-legends/step-5.html
+++ b/examples/guides/add-legends/step-5.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Rail accident weather | CARTO</title>
+    <title>Transparent Legend | CARTO</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
 
@@ -17,12 +17,12 @@
 <body>
     <div id="map"></div>
     <aside class="toolbox">
-        <div class="box">
+        <div class="box" id="dark">
             <header>
-                <h1>Rail Accidents by Weather</h1>
+                <h1 id="light">Rail Accidents by Weather</h1>
             </header>
             <!-- Add legend data -->
-            <section>
+            <section id="light">
                 <div id="controls">
                     <ul id="content"></ul>
                 </div>
@@ -45,9 +45,12 @@
 
         const source = new carto.source.Dataset("railroad_accidents");
         const viz = new carto.Viz(`
+            @myRamp: ramp($weather,[darkorange,darkviolet,darkturquoise])
+            @myOpacity: 0.5
+
             width: 5
-            color: ramp(top($weather,3),[darkorange,darkviolet,darkturquoise])
-            strokeWidth: 0.2
+            color: opacity(@myRamp,@myOpacity)
+            strokeWidth: 1
             strokeColor: black
         `);
         const layer = new carto.Layer('layer', source, viz);
@@ -55,32 +58,31 @@
 
         //** ADD LEGEND **//
 
-        // A function to convert map colors to HEX values for legend
-        function rgbToHex(color) {
-            return "#" + ((1 << 24) + (color.r << 16) + (color.g << 8) + color.b).toString(16).slice(1);
-        }
-
         // When layer loads, trigger legend event
         layer.on('loaded', () => {
 
-            // Request data for legend from the layer viz
-            const colorLegend = layer.viz.color.getLegendData({
-                othersLabel: 'Other weather'
-            });
+            // Request data for legend from the layer viz variables 'myRamp' and 'myOpacity'
+            const colorLegend = layer.viz.variables.myRamp.getLegendData();
+            const opacity = layer.viz.variables.myOpacity.value;
+
             let colorLegendList = '';
 
             // Create list elements for legend
             colorLegend.data.forEach((legend, index) => {
-                const color = rgbToHex(legend.value);
+                const color = legend.value;
+
+                // Add the predefined opacity to the ramp color components
+                const rgba = `rgba(${color.r}, ${color.g}, ${color.b}, ${opacity})`;
 
                 // Style for legend items based on geometry type
                 colorLegendList +=
-                    `<li><span class="point-mark" style="background-color:${color}; border: 1px solid black;"></span><span>${legend.key}</span></li>\n`;
+                    `<li><span class="point-mark" style="background-color:${rgba}; border: 1px solid black;"></span><span>${legend.key}</span></li>\n`;
             });
 
             // Place list items in the content section of the title/legend box
             document.getElementById('content').innerHTML = colorLegendList;
         });
+
     </script>
 
 </body>
