--- a/examples/guides/add-legends/step-6.html
+++ b/examples/guides/add-legends/step-6.html
@@ -2,89 +2,98 @@
 <html>
 
 <head>
-    <title>Transparent Legend | CARTO</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="UTF-8">
+  <script src="../../../dist/carto-vl.js"></script>
 
-    <script src="../../../dist/carto-vl.js"></script>
+  <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.52.0/mapbox-gl.js"></script>
+  <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.52.0/mapbox-gl.css" rel="stylesheet" />
 
-    <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.52.0/mapbox-gl.js"></script>
-    <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.52.0/mapbox-gl.css" rel="stylesheet" />
-
-    <link rel="stylesheet" type="text/css" href="../../style.css">
+  <link rel="stylesheet" type="text/css" href="../../style.css">
 </head>
 
 <body>
-    <div id="map"></div>
-    <aside class="toolbox">
-        <div class="box" id="dark">
-            <header>
-                <h1 id="light">Rail Accidents by Weather</h1>
-            </header>
-            <!-- Add legend data -->
-            <section id="light">
-                <div id="controls">
-                    <ul id="content"></ul>
-                </div>
-            </section>
+  <div id="map"></div>
+  <aside class="toolbox">
+    <div class="box">
+      <header>
+        <h1>Percent Master's Degree</h1>
+      </header>
+      <section>
+        <div id="controls">
+          <p id="content-title"></p>
+          <ul id="content"></ul>
         </div>
-    </aside>
+      </section>
+      <footer class="js-footer"></footer>
+    </div>
+  </aside>
+  <div id="loader">
+    <div class="CDB-LoaderIcon CDB-LoaderIcon--big">
+      <svg class="CDB-LoaderIcon-spinner" viewBox="0 0 50 50">
+        <circle class="CDB-LoaderIcon-path" cx="25" cy="25" r="20" fill="none"></circle>
+      </svg>
+    </div>
+  </div>
 
-    <script>
-        const map = new mapboxgl.Map({
-            container: 'map',
-            style: carto.basemaps.darkmatter,
-            center: [-96, 41],
-            zoom: 3
-        });
+  <script>
+    const map = new mapboxgl.Map({
+      container: 'map',
+      style: carto.basemaps.voyager,
+      center: [-122.424335, 37.771521],
+      zoom: 12
+    });
 
-        carto.setDefaultAuth({
-            username: 'cartovl',
-            apiKey: 'default_public'
-        });
+    carto.setDefaultAuth({
+      username: 'cartovl',
+      apiKey: 'default_public'
+    });
 
-        const source = new carto.source.Dataset("railroad_accidents");
-        const viz = new carto.Viz(`
-            @myRamp: ramp($weather,[darkorange,darkviolet,darkturquoise])
-            @myOpacity: 0.5
+    const source = new carto.source.Dataset('demographics_sf');
+    const viz = new carto.Viz(`
+      color: ramp(globalquantiles($masters_percent,5),purp)
+      strokeWidth: 1
+    `);
+    const layer = new carto.Layer('layer', source, viz);
 
-            width: 5
-            color: opacity(@myRamp,@myOpacity)
-            strokeWidth: 1
-            strokeColor: black
-        `);
-        const layer = new carto.Layer('layer', source, viz);
-        layer.addTo(map);
+    layer.addTo(map, 'watername_ocean');
 
-        //** ADD LEGEND **//
+    layer.on('loaded', () => {
+      hideLoader();
 
-        // When layer loads, trigger legend event
-        layer.on('loaded', () => {
+      const colorLegend = layer.viz.color.getLegendData({
+        othersLabel: 'Default',
+        samples: 20
+      });
 
-            // Request data for legend from the layer viz variables 'myRamp' and 'myOpacity'
-            const colorLegend = layer.viz.variables.myRamp.getLegendData();
-            const opacity = layer.viz.variables.myOpacity.value;
+      let colorLegendList = '';
 
-            let colorLegendList = '';
+      colorLegend.data.forEach((legend) => {
+        const colorHex = rgbToHex(legend.value);
+        const keyMin = legend.key[0].toFixed(2);
+        const keyMax = legend.key[1].toFixed(2);
+        let bucket = `${keyMin} - ${keyMax}`;
+        if (keyMin==='-Infinity'){
+          bucket = `<${keyMax}`;
+        }else if (keyMax==='Infinity'){
+          bucket = `>${keyMin}`;
+        }
 
-            // Create list elements for legend
-            colorLegend.data.forEach((legend, index) => {
-                const color = legend.value;
+      colorLegendList +=
+          `<li><span class="polygon-mark" style="background-color:${colorHex};"></span> <span>${bucket}</span></li>\n`;
+      });
 
-                // Add the predefined opacity to the ramp color components
-                const rgba = `rgba(${color.r}, ${color.g}, ${color.b}, ${opacity})`;
+      document.getElementById('content').innerHTML = colorLegendList;
 
-                // Style for legend items based on geometry type
-                colorLegendList +=
-                    `<li><span class="point-mark" style="background-color:${rgba}; border: 1px solid black;"></span><span>${legend.key}</span></li>\n`;
-            });
+   });
 
-            // Place list items in the content section of the title/legend box
-            document.getElementById('content').innerHTML = colorLegendList;
-        });
+    function hideLoader() {
+      document.getElementById('loader').style.opacity = '0';
+    }
 
-    </script>
+    function rgbToHex(color) {
+      return "#" + ((1 << 24) + (color.r << 16) + (color.g << 8) + color.b).toString(16).slice(1);
+    }
 
+  </script>
 </body>
 
 </html>
