--- a/examples/guides/add-legends/step-8.html
+++ b/examples/guides/add-legends/step-8.html
@@ -2,12 +2,11 @@
 <html>
 
 <head>
-  <title>Line legend | CARTO</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta charset="UTF-8">
   <script src="../../../dist/carto-vl.js"></script>
+
   <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.52.0/mapbox-gl.js"></script>
   <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.52.0/mapbox-gl.css" rel="stylesheet" />
+
   <link rel="stylesheet" type="text/css" href="../../style.css">
 </head>
 
@@ -16,7 +15,7 @@
   <aside class="toolbox">
     <div class="box">
       <header>
-        <h1>San Francisco Streets</h1>
+        <h1>Legend</h1>
       </header>
       <section>
         <div id="controls">
@@ -38,43 +37,51 @@
     const map = new mapboxgl.Map({
       container: 'map',
       style: carto.basemaps.voyager,
-      center: [-122.424335, 37.771521],
-      zoom: 12
+      center: [-73.954323, 40.711743],
+      zoom: 15.7
     });
-
-    const nav = new mapboxgl.NavigationControl({
-      showCompass: false
-    });
-    map.addControl(nav, 'top-left');
 
     carto.setDefaultAuth({
       username: 'cartovl',
       apiKey: 'default_public'
     });
 
-    const source = new carto.source.Dataset('sf_stclines');
+    const source = new carto.source.Dataset('table_311_complaints');
     const viz = new carto.Viz(`
-      color: ramp(top($st_type, 5), bold)
-      width: 2
+      symbol: ramp(buckets($complaint,['Car','Bus']), [car,bus], cross)
+      color: ramp(buckets($complaint,['Car','Bus']), [#59ca22,#009fff])
+      symbolPlacement: align_bottom
+      width: 30
     `);
     const layer = new carto.Layer('layer', source, viz);
+    layer.addTo(map);
 
-    layer.addTo(map, 'watername_ocean');
     layer.on('loaded', () => {
       hideLoader();
 
-      const colorLegend = layer.viz.color.getLegendData({
-        othersLabel: 'Others'
+      const symbolLegend = layer.viz.symbol.getLegendData({ othersLabel: 'Default' });
+      const colorLegend = layer.viz.color.getLegendData();
+
+      let symbolLegendList = '';
+
+      symbolLegend.data.forEach((legend, index) => {
+        const colorHex = rgbToHex(colorLegend.data[index].value);
+        symbolLegendList +=
+          `
+          <li>
+              <span
+                class="image-mark"
+                style="
+                  background-color: ${colorHex};
+                  mask-image:url(${legend.value});
+                  -webkit-mask-image:url(${legend.value})
+              "></span>
+              <span>${legend.key}</span>
+          </li>
+        `
       });
 
-      let colorLegendList = '';
-      colorLegend.data.forEach((legend) => {
-        const colorHex = rgbToHex(legend.value);
-        colorLegendList +=
-          `<li><span class="${viz.geometryType}-mark" style="border-color:${colorHex};"></span> <span>${legend.key}</span></li>\n`;
-      });
-
-      document.getElementById('content').innerHTML = colorLegendList;
+      document.getElementById('content').innerHTML = symbolLegendList;
     });
 
     function hideLoader() {
