--- a/examples/guides/add-legends/step-9.html
+++ b/examples/guides/add-legends/step-9.html
@@ -2,6 +2,10 @@
 <html>
 
 <head>
+  <title>Legend unclassed | CARTO</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+
   <script src="../../../dist/carto-vl.js"></script>
 
   <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.52.0/mapbox-gl.js"></script>
@@ -15,7 +19,7 @@
   <aside class="toolbox">
     <div class="box">
       <header>
-        <h1>Legend</h1>
+        <h1>Latitudes</h1>
       </header>
       <section>
         <div id="controls">
@@ -37,51 +41,46 @@
     const map = new mapboxgl.Map({
       container: 'map',
       style: carto.basemaps.voyager,
-      center: [-73.954323, 40.711743],
-      zoom: 15.7
+      center: [0, 43],
+      zoom: 1
     });
+
+    const nav = new mapboxgl.NavigationControl({
+      showCompass: false
+    });
+    map.addControl(nav, 'top-left');
 
     carto.setDefaultAuth({
       username: 'cartovl',
       apiKey: 'default_public'
     });
 
-    const source = new carto.source.Dataset('table_311_complaints');
+    const source = new carto.source.Dataset('populated_places');
     const viz = new carto.Viz(`
-      symbol: ramp(buckets($complaint,['Car','Bus']), [car,bus], cross)
-      color: ramp(buckets($complaint,['Car','Bus']), [#59ca22,#009fff])
-      symbolPlacement: align_bottom
-      width: 30
+      color: ramp(linear($latitude), sunset)
+      width: 5
+      strokeWidth: 0
     `);
     const layer = new carto.Layer('layer', source, viz);
-    layer.addTo(map);
 
+    layer.addTo(map, 'watername_ocean');
     layer.on('loaded', () => {
       hideLoader();
 
-      const symbolLegend = layer.viz.symbol.getLegendData({ othersLabel: 'Default' });
       const colorLegend = layer.viz.color.getLegendData();
-
-      let symbolLegendList = '';
-
-      symbolLegend.data.forEach((legend, index) => {
-        const colorHex = rgbToHex(colorLegend.data[index].value);
-        symbolLegendList +=
-          `
-          <li>
-              <span
-                class="image-mark"
-                style="
-                  background-color: ${colorHex};
-                  mask-image:url(${legend.value});
-                  -webkit-mask-image:url(${legend.value})
-              "></span>
-              <span>${legend.key}</span>
-          </li>
-        `
+      let colorLegendList = '';
+      // Get the information for legend
+      const entries = colorLegend.data;
+      entries.reverse();
+      entries.forEach((legend, index) => {
+        const colorHex = rgbToHex(legend.value);
+        const entry = legend.key.toFixed(2);
+        colorLegendList +=
+          `<li><span class="point-mark" style="background-color:${colorHex};"></span> <span>${entry}</span></li>\n`;
       });
 
-      document.getElementById('content').innerHTML = symbolLegendList;
+      // Update the legend with the legend information
+      document.getElementById('content').innerHTML = colorLegendList;
     });
 
     function hideLoader() {
