--- a/debug/animation/timedow.html
+++ b/debug/animation/timedow.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Day of the week | CARTO VL</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,16 +8,18 @@
   <script src="../dist/carto-vl.js"></script>
   <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.52.0/mapbox-gl.js"></script>
   <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.52.0/mapbox-gl.css" rel="stylesheet" />
-<style>
+  <style>
     body {
       margin: 0;
       padding: 0;
     }
+
     #map {
       position: absolute;
       height: 100%;
       width: 100%;
     }
+
     #timer {
       position: absolute;
       top: 20px;
@@ -27,6 +30,7 @@
     }
   </style>
 </head>
+
 <body>
   <div id="map"></div>
   <div id="timer"></div>
@@ -37,8 +41,11 @@
         version: 8,
         sources: {},
         layers: [{
-            id: 'background', type: 'background',
-            paint: { 'background-color': 'black' }
+          id: 'background',
+          type: 'background',
+          paint: {
+            'background-color': 'black'
+          }
         }]
       },
       center: [0, 0],
@@ -80,16 +87,18 @@
         ST_Transform(ST_SetSRID(ST_MakePoint(x, y), 4326), 3857) AS the_geom_webmercator
         FROM params, positions
     `);
+    
     const viz = new carto.Viz(`
-      width: 15 + @dow*8
       @dow: clusterTime($date, 'dayOfWeek', 'Europe/Madrid')
-      color: ramp(linear(@dow), ag_Sunset)
-      // filter: animation(linear(@dow), 5, fade(0.4,0.4))
-      filter: animation(linear(@dow, 1, 8), 5, fade(0.5,0.5))
       @list: viewportFeatures(@dow)
       @maxDow: globalMax(@dow)
       @minDow: globalMin(@dow)
+
+      width: 15 + @dow*8
+      color: ramp(linear(@dow), ag_Sunset)
+      filter: animation(linear(@dow, 1, 8), 5, fade(0.5,0.5))
     `);
+
     const DAYS = {
       1: 'Monday',
       2: 'Tuesday',
@@ -98,34 +107,34 @@
       5: 'Friday',
       6: 'Saturday',
       7: 'Sunday'
-    }
+    };
+
     const layer = new carto.Layer('layer', source, viz);
     layer.addTo(map, 'background');
+
     let info = true;
     layer.on('updated', () => {
       if (viz.filter.expressionName === 'animation') {
-          const dayValue = viz.filter.getProgressValue();
-          const dayName = DAYS[Math.round(dayValue)];
-          document.getElementById("timer").textContent = dayName;
+        const dayValue = viz.filter.getProgressValue();
+        const dayName = DAYS[Math.round(dayValue)];
+        document.getElementById("timer").textContent = dayName;
       } else {
-          console.log("Min", viz.variables.minDow.value);
-          console.log("Max", viz.variables.maxDow.value);
-          console.log('dow var:',viz.variables.list.value.map(f => viz.variables.dow.eval(f)));
-          console.log('dow prop:',viz.variables.list.value.map(f => f[viz.variables.dow.propertyName]));
+        console.log("Min", viz.variables.minDow.value);
+        console.log("Max", viz.variables.maxDow.value);
+        console.log('dow var:', viz.variables.list.value.map(f => viz.variables.dow.eval(f)));
+        console.log('dow prop:', viz.variables.list.value.map(f => f[viz.variables.dow.propertyName]));
       }
-
-      // console.log('dow var:',viz.variables.list.value.map(f => f.variables.dow.value));  // <- f is not a viz feature!
     });
+
     const interactivity = new carto.Interactivity(layer);
     interactivity.on('featureClick', event => {
       if (event.features.length > 0) {
         const feature = event.features[0];
         const value = feature.variables.dow.value
-        console.log('day:',DAYS[value],`(${value}) [${feature.id}]`);
+        console.log('day:', DAYS[value], `(${value}) [${feature.id}]`);
       }
     });
   </script>
 </body>
+
 </html>
-
-
