--- a/debug/basic/list.html
+++ b/debug/basic/list.html
@@ -22,7 +22,8 @@
 
     #timer {
       position: absolute;
-      top: '20px', left: '20px';
+      top: '20px';
+      left: '20px';
       color: white;
       font-family: Arial;
       font-size: 20pt;
@@ -42,7 +43,9 @@
         layers: [{
           id: 'background',
           type: 'background',
-          paint: { 'background-color': 'black' }
+          paint: {
+            'background-color': 'black'
+          }
         }]
       },
       center: [-100, 40],
@@ -65,8 +68,9 @@
       @number: $zip
       @list: viewportFeatures(@number, $sttext)
       @anotheList: viewportFeatures($zip)
-      width: 20 // + 0*@number
       @c: $zip > 50000
+
+      width: 20 // + 0 * @number
     `);
     const layer = new carto.Layer('layer', source, viz);
     layer.addTo(map, 'background');
