--- a/examples/advanced/landing-page/spend-data.html
+++ b/examples/advanced/landing-page/spend-data.html
@@ -41,9 +41,9 @@
     const source = new carto.source.Dataset('tx_0125_copy_copy');
     const viz = new carto.Viz(`
       width: blend(1,
-                  blend(5, 100*linear($amount,viewportMIN($amount),viewportMAX($amount)), linear(zoom(), 14,
-                  16)),
-                  linear(zoom(), 13, 14)
+        blend(5, 100 * linear($amount, viewportMIN($amount), viewportMAX($amount)),
+        linear(zoom(), 14, 16)),
+        linear(zoom(), 13, 14)
       )
       color: rgba(255,255,255,0.2)
       strokeColor: ramp(top($category,5),vivid)
