--- a/debug/sources/geojson-file.html
+++ b/debug/sources/geojson-file.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>GeoJSON points test | CARTO</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,6 +14,7 @@
       margin: 0;
       padding: 0;
     }
+
     #map {
       position: absolute;
       height: 100%;
@@ -20,6 +22,7 @@
     }
   </style>
 </head>
+
 <body>
   <div id="map"></div>
   <script>
@@ -28,9 +31,7 @@
       style: carto.basemaps.voyager,
       center: [0, 0],
       zoom: 5,
-      scrollZoom: true,
-
-
+      scrollZoom: true
     });
 
     const nav = new mapboxgl.NavigationControl({
@@ -44,12 +45,15 @@
 
     map.on('load', () => {
       fetch('http://127.0.0.1:8080/test/common/sources/point.geojson')
-      .then(response => response.json())
-      .then(function(data){
+        .then(response => response.json())
+        .then(function (data) {
 
-        // Add MGL Layer
-        map.addSource('hike', { type: 'geojson', data: data });
-        map.addLayer({
+          // Add MGL Layer
+          map.addSource('hike', {
+            type: 'geojson',
+            data: data
+          });
+          map.addLayer({
             "id": "hike",
             "type": "circle",
             "source": "hike",
@@ -57,20 +61,21 @@
               "circle-radius": 200,
               "circle-opacity": 0.5,
               "circle-color": "#00BFFF"
-             }
-        });
+            }
+          });
 
-        // Add CARTO Layer
-        const source = new carto.source.GeoJSON(data);
-        const viz = new carto.Viz(`
-          width: 400
-          color: opacity(#FF3D00, 0.5)
-          strokeWidth: 0
-        `);
-        const layer = new carto.Layer('layer', source, viz);
-        layer.addTo(map, 'hike');
-      });
+          // Add CARTO Layer
+          const source = new carto.source.GeoJSON(data);
+          const viz = new carto.Viz(`
+            width: 400
+            color: opacity(#FF3D00, 0.5)
+            strokeWidth: 0
+          `);
+          const layer = new carto.Layer('layer', source, viz);
+          layer.addTo(map, 'hike');
+        });
     });
   </script>
 </body>
+
 </html>
