name change for select multiple layers

--- a/examples/sources/select-layer.html
+++ b/examples/sources/select-layer.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Select layer | CARTO</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
   <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.52.0/mapbox-gl.css" rel="stylesheet" />
   <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
+
 <body>
   <div id="map"></div>
   <aside class="toolbox">
@@ -17,7 +19,7 @@
         <h1>Select layer</h1>
       </header>
       <section>
-        <p class="description open-sans">Update the source of your layers</p>
+        <p class="description open-sans">Select the source layer to draw</p>
         <div id="controls">
           <ul class="actions">
             <li>
@@ -110,4 +112,5 @@
     }
   </script>
 </body>
+
 </html>
